python-app/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-ingress
  namespace: devops-app
  labels:
    app: flask-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000   # Flask default port
      protocol: TCP
